feat: 도커파일, CI/CD 환경변수 추가